--- a/src/src/main/resources/application-prod.properties
+++ b/src/src/main/resources/application-prod.properties
@@ -12,7 +12,7 @@ spring.http.multipart.max-request-size=256Mb
 spring.jackson.property-naming-strategy=CAMEL_CASE_TO_LOWER_CASE_WITH_UNDERSCORES
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 logging.file=logs/app.log
 logging.level.ownradio=info
 logging.level.org.springframework=warn
