--- a/src/src/main/resources/application-dev.properties
+++ b/src/src/main/resources/application-dev.properties
@@ -9,7 +9,7 @@ spring.http.multipart.max-request-size=256Mb
 spring.jackson.property-naming-strategy=CAMEL_CASE_TO_LOWER_CASE_WITH_UNDERSCORES
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 logging.file=logs/app.log
 logging.level.ownradio=debug
 logging.level.org.springframework=warn
