Вынесла в отдельную папку api v3, добавила скрипты БД

--- a/src/src/main/resources/application-prod.properties
+++ b/src/src/main/resources/application-prod.properties
@@ -1,9 +1,6 @@
-#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/ownradio
-#spring.datasource.username=tanat
-#spring.datasource.password=123456
-spring.datasource.url=jdbc:postgresql://10.10.0.67:5432/ownRadioJavaTest
-spring.datasource.username=a.polunina
-spring.datasource.password=6ImtqMGAt1
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/ownradio
+spring.datasource.username=tanat
+spring.datasource.password=123456
 spring.datasource.platform=org.hibernate.dialect.PostgreSQL94Dialect
 spring.datasource.test-while-idle=true
 spring.datasource.test-on-borrow=true
@@ -12,7 +9,7 @@ spring.datasource.time-between-eviction-runs-millis=5000
 spring.datasource.min-evictable-idle-time-millis=60000
 spring.http.multipart.max-file-size=256Mb
 spring.http.multipart.max-request-size=256Mb
-#spring.jackson.property-naming-strategy=CAMEL_CASE_TO_LOWER_CASE_WITH_UNDERSCORES
+spring.jackson.property-naming-strategy=CAMEL_CASE_TO_LOWER_CASE_WITH_UNDERSCORES
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
