--- a/src/src/main/resources/application-dev.properties
+++ b/src/src/main/resources/application-dev.properties
@@ -6,7 +6,7 @@ spring.datasource.password=
 spring.datasource.platform=org.hibernate.dialect.H2Dialect
 spring.http.multipart.max-file-size=256Mb
 spring.http.multipart.max-request-size=256Mb
-#spring.jackson.property-naming-strategy=CAMEL_CASE_TO_LOWER_CASE_WITH_UNDERSCORES
+spring.jackson.property-naming-strategy=CAMEL_CASE_TO_LOWER_CASE_WITH_UNDERSCORES
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
