Исправила расчет рейтинга при повтороной отправке записи истории

--- a/v3/src/main/resources/application-prod.properties
+++ b/v3/src/main/resources/application-prod.properties
@@ -21,5 +21,6 @@ logging.level.ownradio=info
 logging.level.org.springframework=warn
 logging.level.org.hibernate=warn
 #server.port = 9090
-spring.datasource.schema=classpath:/data/postgresql/schema.sql
+#There is switch on file with sql scripts for auto create stored procedures
+#spring.datasource.schema=classpath:/data/postgresql/schema.sql
 #spring.datasource.data=classpath:/data/postgresql/data.sql
