--- a/v3/pom.xml
+++ b/v3/pom.xml
@@ -65,6 +65,11 @@
             <version>0.8.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
